Wed May  4 09:56:57 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_wait_for_single_fd): new.
	* thread.c (select_single): select(2) based backend for rb_wait_for_single_fd().

	* io.c (make_writeconv): use rb_wait_for_single_fd() instaed of
	  rb_thread_fd_select().
	* io.c (rb_io_wait_readable): ditto.
	* thread.c (rb_thread_wait_fd_rw): ditto.

	* io.c (wait_readable): removed.
	* thread.c (init_set_fd): new helper function.
	* include/ruby/io.h (RB_WAITFD_IN, RB_WAITFD_PRI, RB_WAITFD_OUT):
	  new constant for rb_single_wait_fd().

	The patch was written by Eric Wong. [Ruby 1.9 - Feature #4531]

Wed May  4 08:04:59 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix time dumping so that
	  Syck can load UTC times that Psych dumps.

Wed May  4 07:33:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_copy): fix wrong argument.This issue was pointed
	  out by Eric Wong. [ruby-core:35982]

Tue May  3 20:29:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_chmod_symbol_mode):
	  Skip sticky bit test if the platform is FreeBSD. It doesn't allow to
	  change sticky bit if a target is regular file.

Tue May  3 18:23:57 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/date/test_date.rb (TestDate#test_coerce):
	  test for [ruby-core:35127].

Tue May  3 04:27:53 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_select): preserve errno if no error
	  occurred.

Tue May  3 03:57:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_w32_fdcopy): add prototype.  fixes
	  #4640

Mon May  2 01:02:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/fileutils.rb (FileUtils#chmod): accept symbolic mode argument.
	  The patch was written by takkanm. [ruby-core:26029][Feature #2190]

	* lib/fileutils.rb (FileUtils#fu_mode): new helper function.